--- a/index.html
+++ b/index.html
@@ -203,8 +203,8 @@
             <div class="row">
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-envelope"></i> dummy@gmail.com</p>
-                    <p><i class="fa-solid fa-phone"></i> +91 XXXXXXXXXX</p>
+                    <p><i class="fa-solid fa-envelope"></i> tyagiharshit96@gmail.com</p>
+                    <p><i class="fa-solid fa-phone"></i> +91 7900541516</p>
                     <div class="social-icons">
                         <a target="_blank" href="https://www.youtube.com/@coderunderrated"><i
                                 class="fa-brands fa-youtube"></i></a>
